--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -203,7 +203,7 @@
             </button>
             <div class="match-actions" *ngIf="selectedMatch">
               <!--<button (click)="updateScore()">🔄Mettre à zéro le score</button>-->
-              <button (click)="saveMatchToFirestore(selectedMatch)">💾</button>
+              <!--<button (click)="saveMatchToFirestore(selectedMatch)">💾</button>-->
             </div>
           </div>
         </div>
