--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -143,7 +143,8 @@ h1 {
 }
 
 .list-group-item:hover {
-  background-color: rgba(176, 159, 149, 0.196);
+  /*background-color: rgba(176, 159, 149, 0.196);*/
+  background-color: #4b29b900;
 }
 
 /* Animations */
