--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -982,3 +982,53 @@ body {
   transform: scaleX(-1) scale(1.2);
   color: #2980b9;
 }
+
+.badge-pastel-primary {
+  background-color: #b3d1ff;
+  color: #2c3e50;
+}
+
+.badge-pastel-secondary {
+  background-color: #e0e0e0;
+  color: #2c3e50;
+}
+
+.badge-pastel-success {
+  background-color: #b3ffb3;
+  color: #2c3e50;
+}
+
+.badge-pastel-danger {
+  background-color: #ffb3b3;
+  color: #2c3e50;
+}
+
+.badge-pastel-warning {
+  background-color: #ffe6b3;
+  color: #2c3e50;
+}
+
+.badge-pastel-info {
+  background-color: #b3e6ff;
+  color: #2c3e50;
+}
+
+.badge-pastel-dark {
+  background-color: #d1d1d1;
+  color: #2c3e50;
+}
+
+.badge-pastel-purple {
+  background-color: #e6b3ff;
+  color: #2c3e50;
+}
+
+.badge-pastel-pink {
+  background-color: #ffb3e6;
+  color: #2c3e50;
+}
+
+.badge-pastel-teal {
+  background-color: #b3ffe6;
+  color: #2c3e50;
+}
