--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,13 +20,13 @@
     <button *ngIf="!showTeamFilterModal" 
             class="btn btn-primary mt-2" 
             (click)="showTeamFilterModal = true">
-            Equipes🔍
+            Equipes
     </button>
 
     <button *ngIf="!showCompetitionFilterModal" 
             class="btn btn-primary mt-2" 
             (click)="showCompetitionFilterModal = true">
-            Compétitions🔍
+            Compét.
     </button>
     
 
