style : Disposition tactique remplacé par 👕

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -256,7 +256,7 @@
               <span style="font-size: 2em;">⚽</span>
             </button>
             <button class="btn btn-sm btn-outline-primary" (click)="openDispositionModal(match)">
-              Disposition tactique
+              <span style="font-size: 2em;">👕</span>
             </button>            
             <button class="btn btn-sm btn-outline-primary" (click)="toggleMatchEditForm(match)">
               <span style="font-size: 2em;">{{ showMatchEditForm ? '🖍️' : '✏️' }}</span>
