--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -834,41 +834,41 @@
 
   <!-- Modal de classement -->
   <div *ngIf="showRankingModal" class="score-modal">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog modal-xl" style="min-width: 100%; margin-right: 0;">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title">Classement - {{ selectedCompetitionFilter }}</h5>
           <button type="button" class="btn-close" (click)="closeRankingModal()"></button>
         </div>
-        <div class="modal-body">
+        <div class="modal-body p-0">
           <div class="table-responsive">
-            <table class="table table-striped">
+            <table class="table table-striped mb-0">
               <thead>
                 <tr>
-                  <th>Pos</th>
-                  <th>Équipe</th>
-                  <th>Pts</th>
-                  <th>J</th>
-                  <th>G</th>
-                  <th>N</th>
-                  <th>P</th>
-                  <th>BP</th>
-                  <th>BC</th>
-                  <th>Diff</th>
+                  <th class="px-1">Pos</th>
+                  <th class="px-1">Équipe</th>
+                  <th class="px-1">Pts</th>
+                  <th class="px-1">J</th>
+                  <th class="px-1">G</th>
+                  <th class="px-1">N</th>
+                  <th class="px-1">P</th>
+                  <th class="px-1">BP</th>
+                  <th class="px-1">BC</th>
+                  <th class="px-1">Diff</th>
                 </tr>
               </thead>
               <tbody>
                 <tr *ngFor="let team of currentRanking; let i = index">
-                  <td>{{ i + 1 }}</td>
-                  <td>{{ team.name }}</td>
-                  <td><strong>{{ team.points }}</strong></td>
-                  <td>{{ team.matches }}</td>
-                  <td>{{ team.wins }}</td>
-                  <td>{{ team.draws }}</td>
-                  <td>{{ team.losses }}</td>
-                  <td>{{ team.goalsFor }}</td>
-                  <td>{{ team.goalsAgainst }}</td>
-                  <td [ngClass]="{'text-success': team.goalDifference > 0, 'text-danger': team.goalDifference < 0}">
+                  <td class="px-1">{{ i + 1 }}</td>
+                  <td class="px-1">{{ team.name }}</td>
+                  <td class="px-1"><strong>{{ team.points }}</strong></td>
+                  <td class="px-1">{{ team.matches }}</td>
+                  <td class="px-1">{{ team.wins }}</td>
+                  <td class="px-1">{{ team.draws }}</td>
+                  <td class="px-1">{{ team.losses }}</td>
+                  <td class="px-1">{{ team.goalsFor }}</td>
+                  <td class="px-1">{{ team.goalsAgainst }}</td>
+                  <td class="px-1" [ngClass]="{'text-success': team.goalDifference > 0, 'text-danger': team.goalDifference < 0}">
                     {{ team.goalDifference > 0 ? '+' : '' }}{{ team.goalDifference }}
                   </td>
                 </tr>
