--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -92,7 +92,6 @@ h1 {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -109,6 +108,7 @@ h1 {
   box-shadow: none;
   overflow-y: auto;
   position: relative;
+  border-radius: 8px;
 }
 
 /* Style des formulaires */
@@ -483,7 +483,7 @@ h1 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: rgba(0, 0, 0, 0.9);
+  background: linear-gradient(135deg, rgba(25, 17, 55, 0.9), rgba(64, 50, 123, 0.8));
   padding: 2rem;
   border-radius: 15px;
   text-align: center;
@@ -640,7 +640,7 @@ h1 {
 
 .terrain {
   background: linear-gradient(to bottom, #4CAF50, #388E3C);
-  border-radius: 0px;
+  border-radius: 8px;
   padding: 0;
   margin: 1rem 0;
   position: relative;
