--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,7 +50,7 @@
             </span>
     </button>
 
-    <button 
+    <!--<button 
     *ngIf="!showCompetitionFilterModal && !showTeamFilterModal && !showMatchForm"
     class="btn btn-outline-info mt-2" 
     [ngClass]="selectedCompetitionFilter ? getCompetitionBadgeColor(selectedCompetitionFilter) : 'btn-info'"
@@ -59,7 +59,7 @@
             [disabled]="isSharingCompetition">
             <i class="fas" [ngClass]="isSharingCompetition ? 'fa-spinner fa-spin' : 'fa-share-alt'" [class.text-white]="selectedCompetitionFilter"></i>
             <span [class.text-white]="selectedCompetitionFilter"></span>
-    </button>
+    </button>-->
     
 
 
